--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,28 @@ html {
 }
 
 body {
-  background-color: #d3d1d4 !important;
+  background-color: #efefef !important;
+}
+
+.year-container {
+  border: 1px solid #000;
+  background-color: #555;
+  color: #fff;
+  font-size: 1.5rem;
+  overflow: hidden;
+  height: 3rem;
+}
+
+.year-container .year-btn {
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 0rem 1rem;
+  line-height: 2.8rem;
+}
+
+.year-container h2 {
+  line-height: 3rem;
 }
 
 .day-container {
