--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap');
+
 html {
   font-size: 16px;
 }
 
 body {
   background-color: #efefef !important;
+  font-family: 'Open Sans', sans-serif !important;
 }
 
 .header {
