--- a/src/index.css
+++ b/src/index.css
@@ -33,11 +33,11 @@ body {
   cursor: pointer;
   font-size: 1.5rem;
   font-weight: bold;
-  padding: 0rem 1rem;
+  padding: 0rem 1.5rem;
   line-height: 2.8rem;
 }
 
-.year-container h2 {
+.year-container .year {
   line-height: 3rem;
 }
 
