--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans&display=swap');
+
+html {
+  font-size: 16px;
+}
+
+body {
+  background-color: #efefef !important;
+  font-family: 'Open Sans', sans-serif !important;
+}
+
+.year-container {
+  border: 1px solid #000;
+  background-color: #555;
+  color: #fff;
+  font-size: 1.5rem;
+  overflow: hidden;
+  height: 3rem;
+  z-index: 1;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.year-container.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.year-container .year-btn {
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 0rem 1.5rem;
+  line-height: 2.8rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.year-container .year {
+  line-height: 3rem;
 }
 
-.App-link {
-  color: #61dafb;
+.day-container {
+  border: 1px solid #000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.day-container.red {
+  background-color: #9a2828;
+  color: #fff;
+}
+
+.day-container.gray {
+  background-color: #ffcece;
+  color: #000;
+}
+
+.day-container.squeeze {
+  background-color: #f3f704;
+  color: #000;
+}
+
+.date-box {
+  width: 5rem;
+  height: 5rem;
+  background-color: #fff;
+  color: #000;
+  border-right: 1px solid #000;
+}
+
+.date-name h2 {
+  line-height: 5rem;
+  white-space: nowrap;
+}
+
+.day-name {
+  color: #000;
+  position: absolute;
+  right: 0;
+  width: 4rem;
+  text-align: center;
+  background-color: rgb(255 255 255 / 80%);
+  border-left: 1px solid;
+  border-bottom: 1px solid;
+  padding: 0.2rem;
+  font-size: 1.1rem;
+  text-transform: uppercase;
+}
+
+@media only screen and (max-width: 480px) {
+  html {
+    font-size: 10px;
   }
 }
