--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -10,5 +10,30 @@
 }
 
 .header {
-  height: 9rem;
+  height: 10rem;
+}
+
+.yearContainer {
+  border: 1px solid #000;
+  background-color: #555;
+  color: #fff;
+  font-size: 1.5rem;
+  overflow: hidden;
+  height: 4rem;
+  line-height: 4rem;
+  z-index: 1;
+  text-align: center;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.yearBtn {
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 0rem 1.5rem;
 }
